# machine-learning

ai-self-introduction-analyzer/: .env.example  .gitignore  README.md  analyze.py  audio.py  pyproject.toml  requirements.txt  run.py  transcribe.py
glfw-handwriting-recognizer/glfw-handwriting-recognizer/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
onnx-handwriting-recognizer/: CMakeLists.txt  README.md  build.sh  main.cpp
